--- a/pages/styles.css
+++ b/pages/styles.css
@@ -33,7 +33,7 @@ fieldset {
   border-radius: 15px;
 }
 
-input[type=text], input[type=email], input[type=tel] {
+input[type=text], input[type=email], input[type=tel], textarea {
   font-family: -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   font-size: 1em;
   width: 100%;
@@ -65,6 +65,18 @@ button[type=button], button[type=submit], button[type=reset] {
   float: left;
   height: 16em;
   width: 16em;
+  display: block;
+  background-color: #f7f7f7;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.bannerImage {
+  border-radius: 5px;
+  float: left;
+  height: 16em;
+  width: 100%;
   display: block;
   background-color: #f7f7f7;
   background-size: cover;
