--- a/pages/styles.css
+++ b/pages/styles.css
@@ -33,7 +33,7 @@ fieldset {
   border-radius: 15px;
 }
 
-input[type=text], input[type=email], input[type=tel], textarea {
+input[type=text], input[type=email], input[type=tel], input[type=number], textarea {
   font-family: -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   font-size: 1em;
   width: 100%;
@@ -41,6 +41,10 @@ input[type=text], input[type=email], input[type=tel], textarea {
   margin: 8px 0;
   box-sizing: border-box;
   border-radius: 10px;
+}
+
+input[type=number] {
+  width: 50%;
 }
 
 label {
