add mui support and example page

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   font-family: -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans,
     sans-serif, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -143,4 +143,4 @@ a:hover > .card {
 .upbids-table td, .upbids-table th {
   padding: 15px;
   text-align: left;
-}
+} */
