--- a/pages/styles.css
+++ b/pages/styles.css
@@ -22,6 +22,9 @@
   background-position: center center;
 }
 
+fieldset {
+  border-radius: 15px;
+}
 /* body {
   font-family: -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans,
     sans-serif, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif,
